@@ -13,7 +13,7 @@
 #include <rudiments/stdio.h>
 #include <rudiments/error.h>
 
-//#define DEBUG_MESSAGES 1
+#define DEBUG_MESSAGES 1
 //#define DEBUG_TO_FILE 1
 #include <debugprint.h>
 
